--- a/geowidsrv/web/WEB-INF/web.xml
+++ b/geowidsrv/web/WEB-INF/web.xml
@@ -34,4 +34,21 @@
         <servlet-name>GeowidServlet</servlet-name>
         <url-pattern>/get/*</url-pattern>
     </servlet-mapping>
+
+    <filter>
+        <filter-name>GzipFilter</filter-name>
+        <filter-class>org.eclipse.jetty.servlets.GzipFilter</filter-class>
+
+        <init-param>
+            <param-name>mimeTypes</param-name>
+            <param-value>
+                text/html,text/plain,text/xml,application/xhtml+xml,text/css,application/javascript,image/png,image/gif,application/json
+            </param-value>
+        </init-param>
+    </filter>
+    
+    <filter-mapping>
+        <filter-name>GzipFilter</filter-name>
+        <url-pattern>/*</url-pattern>
+    </filter-mapping>
 </web-app>
