* изменена логика работы вспомогательных классов в демоне (убраны ненужные потоки -- большая часть работы теперь выполняется в основном потоке демона) ! исправлена ошибка с переполнением очереди необработанных данных - удален юнит-тест конвейера обработки * потюнен сервер и js-скрипты для более плавного отображения точек на клиенте

--- a/geowidsrv/web/WEB-INF/web.xml
+++ b/geowidsrv/web/WEB-INF/web.xml
@@ -11,7 +11,7 @@
 
         <init-param>
             <param-name>log-stream-host</param-name>
-            <param-value>127.0.0.1</param-value>
+            <param-value>syslog.ecwid.com</param-value>
         </init-param>
 
         <init-param>
@@ -26,7 +26,7 @@
 
         <init-param>
             <param-name>chunk-size</param-name>
-            <param-value>28</param-value>
+            <param-value>16</param-value>
         </init-param>
     </servlet>
 
