V. 2.0beta. Основные изменения: 1) уменьшено потребление памяти, 2) повышена надежность

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,8 @@
 .idea/
 *.iml
-3rd/
-geowidd/3rd/
 geowidd/resources/GeoLiteCity.dat
-gewoidsrv/3rd/
+geowidd/resources/key
+geowidsrv/resources/key.pub
 out/
+utils/example.log
+utils/ecwid.log
